--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "mongoose": "^8.14.0",
+    "nanoid": "^5.1.5",
     "read-excel-file": "^5.8.7",
     "telegraf": "^4.16.3",
     "telegraf-session-mongodb": "^2.0.2"
